[package]
name = "zusi-result-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.34", features = ["macros", "serde-human-readable"] }
zusi-xml-lib = { path = "../zusi-xml-lib" }

[profile.dev]
codegen-units = 8